--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -66,5 +66,7 @@
             "cljsType": "none"
         }
     ],
-    "workbench.sideBar.location": "left"
+    "workbench.sideBar.location": "left",
+    "editor.fontLigatures": true,
+    "editor.fontFamily": "'Jetbrains Mono', Menlo, Monaco, 'Courier New', monospace"
 }
