--- a/.gitconfig
+++ b/.gitconfig
@@ -28,6 +28,9 @@
 	# Switch to a branch, creating it if necessary.
 	go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
 
+	# Push to origin
+	po = "!git push --set-upstream origin \"$(git rev-parse --abbrev-ref HEAD)\""
+
 	# Show verbose output about tags, branches or remotes
 	tags = tag -l
 	branches = branch --all
