--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -913,6 +913,8 @@ map ctrl+super+alt+down new_window
 map ctrl+w close_window
 map ctrl+tab next_window
 
+map ctrl+k combine : clear_terminal scrollback active : send_text normal,application \x0c
+
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
 # map kitty_mod+t     new_tab
