--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -555,7 +555,7 @@ tab_bar_style powerline
 
 #: Advanced {{{
 
-# shell .
+shell .
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -563,7 +563,7 @@ tab_bar_style powerline
 #: --login to ensure that the shell starts in interactive mode and
 #: reads its startup rc files.
 
-# editor .
+editor .
 
 #: The console editor to use when editing the kitty config file or
 #: similar tasks. A value of . means to use the environment variables
