--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -885,8 +885,10 @@ editor .
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
+# map kitty_mod ctrl
+
 # map kitty_mod+w close_window
-# map kitty_mod+] next_window
+# map ctrl+tab next_window
 # map kitty_mod+[ previous_window
 # map kitty_mod+f move_window_forward
 # map kitty_mod+b move_window_backward
@@ -906,14 +908,29 @@ editor .
 
 #: Tab management {{{
 
-map ctrl+q close_os_window
+# map ctrl+q close_os_window
 map ctrl+t new_tab
 
-map ctrl+super+alt+down new_window
+enabled_layouts splits:split_axis=horizontal,stack
+# enabled_layouts split
+
+map ctrl+shift+down launch --location=hsplit
+map ctrl+shift+right launch --location=vsplit
+
+map ctrl+shift+enter toggle_layout stack
+
+# map ctrl+shift+down new_window
+# map ctrl+super+alt+down new_window
 map ctrl+w close_window
 map ctrl+tab next_window
 
 map ctrl+k combine : clear_terminal scrollback active : send_text normal,application \x0c
+
+map ctrl+1 goto_tab 1
+map ctrl+2 goto_tab 2
+map ctrl+3 goto_tab 3
+map ctrl+4 goto_tab 4
+map ctrl+5 goto_tab 5
 
 # map kitty_mod+right next_tab
 # map kitty_mod+left  previous_tab
