Some uncommited stuff

--- a/dots/.config/kitty/kitty.conf
+++ b/dots/.config/kitty/kitty.conf
@@ -926,6 +926,9 @@ map ctrl+tab next_window
 
 map ctrl+k combine : clear_terminal scrollback active : send_text normal,application \x0c
 
+# map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
+map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/usr/bin/fzf --no-sort --no-mouse --exact -i --tac | kitty +kitten clipboard"
+
 map ctrl+1 goto_tab 1
 map ctrl+2 goto_tab 2
 map ctrl+3 goto_tab 3
