--- a/dots/.gnupg/gpg-agent.conf
+++ b/dots/.gnupg/gpg-agent.conf
@@ -1,5 +1,5 @@
 enable-ssh-support
-pinentry-program /usr/bin/pinentry-gnome3
+pinentry-program /usr/bin/pinentry
 #pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
 default-cache-ttl 60
 max-cache-ttl 120
