--- a/dots/.gitconfig
+++ b/dots/.gitconfig
@@ -106,6 +106,9 @@
 	# https://git-scm.com/docs/git-update-index#_untracked_cache
 	untrackedCache = true
 
+	# Change ssh command for Windows
+	sshcommand = ssh.exe
+
 [color]
 
 	# Use colors in Git commands that are capable of colored output when
