--- a/dots/.config/ghostty/config
+++ b/dots/.config/ghostty/config
@@ -2,23 +2,22 @@ window-height = 34
 window-width = 130
 
 # Config reload
-keybind = ctrl+shift+r=reload_config
+keybind = super+shift+r=reload_config
 
 # Split management
-keybind = ctrl+shift+down=new_split:down
-keybind = ctrl+shift+right=new_split:right
+keybind = super+shift+down=new_split:down
+keybind = super+shift+right=new_split:right
 keybind = ctrl+tab=goto_split:next
+keybind = super+shift+enter=toggle_split_zoom
 
 # Tab navigation
 keybind = super+`=next_tab
-
-# Tab navigation with Ctrl+Numbers
-keybind = ctrl+one=goto_tab:1
-keybind = ctrl+two=goto_tab:2
-keybind = ctrl+three=goto_tab:3
-keybind = ctrl+four=goto_tab:4
-keybind = ctrl+five=goto_tab:5
-keybind = ctrl+six=goto_tab:6
-keybind = ctrl+seven=goto_tab:7
-keybind = ctrl+eight=goto_tab:8
-keybind = ctrl+nine=goto_tab:9
+keybind = super+one=goto_tab:1
+keybind = super+two=goto_tab:2
+keybind = super+three=goto_tab:3
+keybind = super+four=goto_tab:4
+keybind = super+five=goto_tab:5
+keybind = super+six=goto_tab:6
+keybind = super+seven=goto_tab:7
+keybind = super+eight=goto_tab:8
+keybind = super+nine=goto_tab:9
