--- a/dots/.config/zed/settings.json
+++ b/dots/.config/zed/settings.json
@@ -7,6 +7,9 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "debugger": {
+    "dock": "bottom"
+  },
   "features": {
     "edit_prediction_provider": "copilot"
   },
@@ -22,7 +25,7 @@
   "agent": {
     "default_model": {
       "provider": "anthropic",
-      "model": "claude-sonnet-4-5-latest"
+      "model": "claude-sonnet-4-5-thinking-latest"
     }
   },
   "ui_font_size": 16,
